Use Path.of() instead of Paths.get()
Path.of() makes Paths.get() obsolete in Java 11

Change-Id: I5fd7899d1baa0531265f9ae057bb0fbbba27f9dc
Signed-off-by: Edwin Kempin <ekempin@google.com>